# Trevas-Jupyter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-bake.hcl  kernel-windows.json  pom.xml
.github/workflows/: ci.yml
docker/: build-jvm-basekernel-compat.sh  build-trevas-jupyter-image.sh  build-vtl-extension-wheel.sh  install-elyra.sh  install-jupyter-extensions.sh  install-vtl-labextension.sh
docker-config/: jupyter_notebook_config.py
extensions/jupyterlab-vtl-2.1/: .gitignore  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  install.json  package.json  pyproject.toml  tsconfig.json
extensions/jupyterlab-vtl-2.1/.ipynb_checkpoints/: test-checkpoint.vtl
extensions/jupyterlab-vtl-2.1/jupyterlab_vtl_2_1/: __init__.py
extensions/jupyterlab-vtl-2.1/src/: index.ts  trevas-functions.ts  vtl-assigned-vars.ts  vtl-clipboard.ts  vtl-colors.ts  vtl-completion.ts  vtl-editor-state.ts  vtl-keywords.ts  vtl-language.ts  vtl-lint-collect.ts  vtl-lint-theme.ts  vtl-lint.ts  vtl-mime-detect.ts  vtl-mime.ts  vtl-notebook.ts  vtl-parser.ts  vtl-theme.ts  vtl-token-categories.ts
extensions/jupyterlab-vtl-2.1/style/: index.css
extensions/jupyterlab-vtl-2.1/tests/: vtl-editor-state.test.ts  vtl-lint.test.ts  vtl-mime.test.ts  vtl-parser.test.ts
src/main/java/fr/insee/trevas/jupyter/: LoadAssignmentContext.java  SparkUtils.java  Utils.java  VtlAssignmentTargets.java  VtlKernel.java
src/main/resources/: log4j2.properties  logback.xml
src/test/java/: CSVTest.java
src/test/java/fr/insee/trevas/jupyter/: LoadAssignmentContextTest.java  SDMXTest.java  SparkUtilsS3ConfigTest.java  VtlAssignmentTargetsTest.java  VtlKernelCellRerunTest.java  VtlKernelMessagesTest.java
