[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.4.0,<5",
  "hatch-nodejs-version>=0.3.2",
  "hatch-jupyter-builder>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-vtl-2-1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_vtl_2_1/labextension"]
exclude = [".github", "node_modules"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_vtl_2_1/labextension" = "share/jupyter/labextensions/jupyterlab-vtl-2-1"
"install.json" = "share/jupyter/labextensions/jupyterlab-vtl-2-1/install.json"

[tool.hatch.build.hooks.version]
path = "jupyterlab_vtl_2_1/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "jupyterlab_vtl_2_1/labextension/static/style.js",
  "jupyterlab_vtl_2_1/labextension/package.json",
]
skip-if-exists = ["jupyterlab_vtl_2_1/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_vtl_2_1/labextension"
